tests/Semantic/test_2_r04.out
Error type 4 at Line 7: redefine function: compare
