tests/Semantic/test_2_r04.spl
int compare(int x, int y)
{
  if (x > y) {return 1;}
  else if (y > x) {return -1;}
  else {return 0;}
}
float compare(int a, int b)
{
  if (b > a) {return -1.0;}
  if (b == a) {return 0.0;}
  return 1.0;
}
int test_2_r04()
{
  return compare(7, 8);
}
